# ds-code-template

./: README.md
basic-template/: cookiecutter.json
basic-template/{{cookiecutter.package_name}}/: .pylintrc  Dockerfile  Makefile  pyproject.toml  run.yaml  tox.ini
basic-template/{{cookiecutter.package_name}}/test/: test_main.py
basic-template/{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: main.py
